# alienVKheaven

./: .gitignore  CMakeLists.txt  README.md  trace1.tracy
assets/: camera_settings.txt
assets/models/: board.glb  cube.glb  inverted_sphere.glb  inverted_square.glb
assets/models/skyline/: scene.gltf
assets/scenes/: 1fumo.scn  cornellbox.scn  cubes.scn  deccers.scn  demo.scn  fumo.scn  scene_gen.py  skybox.scn  space.scn  sponza.scn  sponza_lights.scn
shaders/: colored_triangle_mesh.vert  debug.frag  debug.vert  deferred.frag  depth_pass.frag  depth_pass.vert  indirect_mesh.vert  lighting.comp  sky.comp  skybox.frag  skybox.vert  tex_image.frag
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  scene_file_schema.txt  vk_constants.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_engine_ui.cpp  vk_images.cpp  vk_images.h  vk_init.cpp  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_scene.cpp  vk_scene.h  vk_scene_loader.cpp  vk_scene_loader.h  vk_scenedata.cpp  vk_scenedata.h  vk_types.h
timings/: sponza_lights-1.csv
