add_executable (engine 
  main.cpp
  vk_constants.h
  vk_types.h
  vk_initializers.cpp
  vk_initializers.h
  vk_images.h
  vk_images.cpp 
  vk_descriptors.h
  vk_descriptors.cpp
  vk_pipelines.h
  vk_pipelines.cpp
  vma_usage.cpp
  vk_engine.h
  vk_engine.cpp
  vk_init.cpp
  vk_loader.h
  vk_loader.cpp
  camera.cpp
  camera.h
  vk_scene.h
  vk_scene.cpp
  vk_scenedata.h
  vk_scenedata.cpp
  vk_scene_loader.h
  vk_scene_loader.cpp
  vk_engine_ui.cpp
  ../third_party/tracy/public/TracyClient.cpp
)


set_property(TARGET engine PROPERTY CXX_STANDARD 20)
target_compile_definitions(engine PUBLIC GLM_FORCE_DEPTH_ZERO_TO_ONE)
target_include_directories(engine PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")

target_link_libraries(engine PUBLIC vma glm Vulkan::Vulkan fmt::fmt stb_image SDL2::SDL2 vkbootstrap imgui fastgltf::fastgltf nativefiledialog Tracy::TracyClient)

target_precompile_headers(engine PUBLIC <optional> <vector> <memory> <string> <vector> <unordered_map> <glm/mat4x4.hpp>  <glm/vec4.hpp> <vulkan/vulkan.h>)

add_custom_command(TARGET engine POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:engine> $<TARGET_FILE_DIR:engine>
  COMMAND_EXPAND_LISTS
  )

  if (MSVC)
    # warning level 4
    add_compile_options(/EHsc /W4 /D_DEBUG /MDd)
else()
    # additional warnings
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()